Fixed z-index first th
Fixed z-index first th

--- a/resources/static/responsiveTable.css
+++ b/resources/static/responsiveTable.css
@@ -14,7 +14,7 @@ html {
 }
 .adc-responsiveTable th {
    font-weight: normal;
-   z-index: 3;
+   /*z-index: 3;*/
 }
 .adc-responsiveTable td:hover, .adc-responsiveTable  input[type="checkbox"], .adc-responsiveTable  input[type="radio"], .adc-responsiveTable .imgZoom {
    cursor: pointer;
